--- a/_data/nav.html
+++ b/_data/nav.html
@@ -1,11 +1,5 @@
 <nav class="nav-primary" role="navigation" >
-  <div id="search">
-    <form role="search" method="get" action="{{ site.baseurl }}//search/">
-      <input id="searchString" name="searchString"
-      placeholder="Be a Better Developer, etc." type="text">
-      <input id="searchButton" name="googleSearchName" type="submit" value="Search">
-    </form>
-  </div>
+  {% include google-search.html %}
   <ul>
     {% for p in site.pages %}
     <li>
