--- a/_data/nav.html
+++ b/_data/nav.html
@@ -1,5 +1,6 @@
 <nav class="nav-primary" role="navigation" >
   <ul>
+    <li> {% include google-search.html %} </li>
     {% for p in site.pages %}
     <li>
       <a {% if p.url == page.url %}class="active"{% endif %} href="{{ site.baseurl }}{{ p.url }}">{{ p.title }}</a>
