Google CSE test

--- a/search.html
+++ b/search.html
@@ -1,10 +1,4 @@
----
-layout: single
-title: Search
-permalink: /search/
-sitemap: false
----
-<div id="home-search" class="home">
+<div id="search">
      <script>
          (function() {
              var cx = '[Your CSE Search ID]';
